neptune-db 13/security_group.tf
# Security Group
resource "aws_security_group" "neptune" {
  name_prefix = "neptune-"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 8182
    to_port     = 8182
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
